third_party/rust/zerocopy/tests/ui-nightly/transmute-mut-src-not-frombytes.stderr
error[E0277]: the trait bound `Src: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                      |
   |                                      the trait `FromBytes` is not implemented for `Src`
   |                                      required by a bound introduced by this call
   |
   = help: the following other types implement trait `FromBytes`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and $N others
note: required by a bound in `AssertSrcIsFromBytes`
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Src`
   |
   = help: the following other types implement trait `FromBytes`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and $N others
note: required by a bound in `AssertSrcIsFromBytes`
  --> tests/ui-nightly/transmute-mut-src-not-frombytes.rs:24:38
   |
24 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
